fixed footer and too large font on smallest mobile

--- a/client/src/assets/landing.css
+++ b/client/src/assets/landing.css
@@ -7,7 +7,7 @@
 }
 
 .landing-title {
-  font-size: 3.5rem;
+  font-size: 3rem;
   font-weight: 700;
   text-shadow: 2px 2px #2C424E;
 }
