--- a/client/src/assets/style.css
+++ b/client/src/assets/style.css
@@ -21,10 +21,11 @@ a:hover {
 
 .feeter {
   background-color: #FE7860;
-  position: sticky;
+  position: relative;
   left: 0;
-  bottom: 0;
+  bottom: -2.5rem;
   width: 100%;
+  margin-top: 2rem;
   padding: .5rem;
   text-align: center;
   font-size: .75rem;
