--- a/client/src/assets/survey.css
+++ b/client/src/assets/survey.css
@@ -1,6 +1,6 @@
 .survey-list {
   width: 90%;
-  margin: 1rem auto;
+  margin: 1rem auto 3rem auto;
   color: #2C424E;
 }
 
